v2.1.14: fix doc attr being covered by doc cover img contols (https://github.com/mustakshif/Asri/issues/26)

--- a/style/features/blur.scss
+++ b/style/features/blur.scss
@@ -289,6 +289,7 @@ body:not(.body--blur, .asri-disable-backdrop-blur) {
 .protyle-background__iconw {
     .protyle-icons {
         mix-blend-mode: normal;
+        @include bg-blur($medium-blur-rd, $brightness-light: 1);
     }
 }
 
