--- a/style/features/cover-image-fading.scss
+++ b/style/features/cover-image-fading.scss
@@ -47,12 +47,12 @@
             margin-bottom: -120px;
 
             .protyle-icons:not(:nth-of-type(2)) {
-                transform: translateY(-48px);
+                transform: translateY(-72px);
                 z-index: 1;
             }
 
             .protyle-background__iconw {
-                transform: translateY(-96px);
+                transform: translateY(-120px);
                 z-index: 1;
             }
         }
